compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_receive_variant_payload_pattern_arity.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/receive_variant_payload_pattern_arity.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × variant payload pattern arity mismatch
   ╭─[tests/fixtures/diagnostics/types/receive_variant_payload_pattern_arity.ml:6:7]
 5 │     receive {
 6 │       Ping(a, b) -> dbg(a)
   ·       ─────┬────
   ·            ╰── `Ping` carries 1 payload value(s), but this pattern has 2
 7 │     }
   ╰────
  help: match the constructor with the same number of payload patterns
